<resources>
    <string name="app_name" translatable="false">Schedule</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="stu_id">学号</string>
    <string name="auth_pwd">统一身份认证密码</string>
    <string name="login">登               录</string>
    <string name="course">课名</string>
    <string name="empty">未填写</string>
    <string name="classroom">教室</string>
    <string name="week_num">周数</string>
    <string name="period">节数</string>
    <string name="teacher">老师</string>
    <string name="confirm">确    定</string>
    <string name="add_course">添加课程</string>
    <string name="set_time">设置时间</string>
    <string name="add_or_modify_succeeded">添加/修改成功</string>
    <string name="wrong_period">节次选择不合理</string>
    <string name="no_empty_weeks">周数不能为空</string>
    <string name="fill_complete_info">请填写完整信息</string>
    <string name="none">暂无</string>
    <string name="not_logged_in">您尚未登录，请先登录</string>
    <string name="week_format">第%1$d周</string>
    <string name="data_update_failed">获取信息失败，请检查网络后重试</string>
    <string name="cur_class_time_format">当前为：%1$s，第%2$d节</string>
    <string name="wrong_captcha">验证码错误</string>
    <string name="curriculum_update_failed">获取课表失败</string>
    <string name="table_update_failed_check_connection">获取课表失败，请检查网络连接</string>
    <string name="update_succeeded">更新课表成功</string>
    <string name="confirm_refresh_curriculum">是否要刷新课表？</string>
    <string name="start_fetch_curriculum">开始获取课表</string>
    <string name="captcha_format_wrong">验证码格式错误</string>
    <string name="refresh_curriculum">刷新课表</string>
    <string name="choose_week">选择周次</string>
    <string name="search">信息查询</string>
    <string name="check_update">检查更新</string>
    <string name="changelog">更新说明</string>
    <string name="set_background">设置背景</string>
    <string name="about">关于软件</string>
    <string name="logout">退出登录</string>
    <string name="check_update_btn">检 查 更 新</string>
    <string name="home_page">软件官网: hitschedule.github.io</string>
    <string name="present_week">(本周)</string>
    <string name="switch_cur_week" translatable="false">修改当前周</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="enter_captcha">请输入验证码</string>
    <string name="enter_here">在此输入</string>
    <string name="choose_from_album">从相册选择背景</string>
    <string name="set_blank_background">设置为无背景</string>
    <string name="update_version">版本更新</string>
    <string name="logging_in">登录中...</string>
    <string name="ok">确定</string>
    <string name="yes">确定</string>
    <string name="start_time_string">%1$s 第%2$d-%3$d节</string>
    <string name="delete_confirm">是否删除</string>
    <string name="delete_succeeded">删除成功</string>
    <string name="select_language">选择语言</string>
    <string name="follow_system_language">跟随系统语言</string>
    <string name="zh_cn" translatable="false">简体中文</string>
    <string name="en_us" translatable="false">English</string>
    <string name="apply">应用</string>
    <string name="health_report">每日上报</string>
    <string name="login_title">登录页面</string>
    <string name="export_ics">导出 .ics 文件</string>
    <string name="android_version_too_low">您的Android版本过低, 请更新系统</string>
    <string name="export_ics_failure">导出 ics 失败, 请向开发者反馈</string>
    <string name="export_ics_success">ics 导出成功, 保存到</string>
    <string name="academic_services">学工系统</string>
    <string name="str_permission_not_all_pass">权限未全部授权，部分功能将受限！</string>
    <string name="str_vpn_login_fail">VPN Login Failed, please check your network and try again！</string>
    <string name="choose_if_vpn">是否通过 VPN 更新? (如未连接校园网环境, 请选择是)</string>
</resources>
