<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="250dp"
    android:background="@color/app_white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/enter_captcha"
        />

    <ImageView
        android:id="@+id/capycha"
        android:layout_marginTop="15dp"
        android:layout_width="100dp"
        android:layout_height="33dp"
        />

    <EditText
        android:id="@+id/input"
        android:hint="@string/enter_here"
        android:singleLine="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_width="100dp"
        android:layout_height="50dp"
        />

    <Button
        android:id="@+id/btn_sure"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/sure"
        />
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1"/>-->

</LinearLayout>