<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:tint="@android:color/background_dark" />


        <EditText
            android:id="@+id/stu_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/shape_round"
            android:drawableLeft="@drawable/ic_user_24dp"
            android:drawablePadding="16dp"

            android:drawableTint="@android:color/background_dark"
            android:hint="@string/stu_id"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@android:color/background_dark"
            android:textColorHint="#787878" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_round"
            android:drawableLeft="@drawable/ic_lock_outline_24dp"
            android:drawablePadding="16dp"
            android:drawableTint="@android:color/background_dark"
            android:hint="@string/auth_pwd"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/background_dark"
            android:textColorHint="#787878" />

        <Button
            android:layout_width="match_parent"
            android:id="@+id/login"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_round"
            android:text="@string/login"
            android:textColor="@android:color/background_dark" />

        <Button
            android:layout_width="match_parent"
            android:id="@+id/web_login"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_round"
            android:text="@string/login"
            android:textColor="@android:color/background_dark" />

    </LinearLayout>

</RelativeLayout>



<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical">-->

    <!--<EditText-->
        <!--android:hint="请输入学号"-->
        <!--android:id="@+id/stu_id"-->
        <!--android:layout_marginTop="40dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

    <!--<EditText-->
        <!--android:hint="请输入统一认证密码"-->
        <!--android:id="@+id/pwd"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

    <!--<Button-->
        <!--android:text="登录"-->
        <!--android:id="@+id/login"-->
        <!--android:layout_marginTop="50dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

<!--</LinearLayout>-->